--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="description" content="Hello, WebVR! • A-Frame">
     <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
   </head>
+  
+  <audio src="/music/space_ambient.mp3" controls>
+</audio>
+  
   <body>
     <a-scene background="color: #ECECEC">
       <a-sphere position="0 1.25 -5" radius="3" src="https://cdn.glitch.com/1c770265-2368-4d9c-acb6-14ecacd28e33%2Fimage.png?1553670256427" shadow></a-sphere>
