Lisasin juhendi tahvli

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <a-scene background="color: #ECECEC">
       <a-sphere position="0 1.25 -5" radius="3" src="https://cdn.glitch.com/1c770265-2368-4d9c-acb6-14ecacd28e33%2Fimage.png?1553670256427" shadow></a-sphere>
       <a-sky src="360vr-amongst-stars-4k-footage-087437194_prevstill (1).jpeg"></a-sky>
+      <a-text rotation="0 180 0" position="3 2 5" value="Juhend
+ 
+Alustades sektori sees on sul kaks valikut: Oppimine voi Testi lahendamine.
+Vajutades maakoorekihi peale ning jargmisena kuvab see infoseinale infot selle kihi kohta (video, tekst jne.)
+2x puldiga maakoorekihi peale vajutades lendad selle kihi vahele ja naed seda tuuma lähemalt.
+Testi lahendades pead sa valima kas lause on toene voi vaar.
+Testi lahendades esitatakse 10 vaidet."></a-text>
     </a-scene>
   </body>
 </html>
