--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello, WebVR! • A-Frame</title>
-    <meta name="description" content="Hello, WebVR! • A-Frame">
+    <title>GEOVR! •</title>
+    <meta name="description" content="GeoVR! • A-Frame">
     <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
   </head>
-  
-  <audio src="/music/space_ambient.mp3" controls>
-</audio>
+  <!--Üldine taustaheli-->
+  <audio src="/music/space_ambient.mp3" controls> </audio>
   
   <body>
     <a-scene background="color: #ECECEC">
