--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  
 Alustades sektori sees on sul kaks valikut: Oppimine voi Testi lahendamine.
 Vajutades maakoorekihi peale ning jargmisena kuvab see infoseinale infot selle kihi kohta (video, tekst jne.)
-2x puldiga maakoorekihi peale vajutades lendad selle kihi vahele ja naed seda tuuma lähemalt.
+2x puldiga maakoorekihi peale vajutades lendad selle kihi vahele ja naed seda tuuma lahemalt.
 Testi lahendades pead sa valima kas lause on toene voi vaar.
 Testi lahendades esitatakse 10 vaidet."></a-text>
     </a-scene>
