--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <!--Maakera-->
       <a-sphere position="0 1.25 -5" radius="3" src="https://cdn.glitch.com/1c770265-2368-4d9c-acb6-14ecacd28e33%2Fimage.png?1553670256427" shadow></a-sphere>
       <!--Taevapilt-->
-      <a-sky src="360vr-amongst-stars-4k-footage-087437194_prevstill (1).jpeg"></a-sky>
+      <a-sky src="jennifer.jpg"></a-sky>
       <!--Juhend-->
       <a-text rotation="0 180 0" position="3 2 5" value="Juhend
  
