--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@ Vajutades maakoorekihi peale ning jargmisena kuvab see infoseinale infot selle k
 2x puldiga maakoorekihi peale vajutades lendad selle kihi vahele ja naed seda tuuma lahemalt.
 Testi lahendades pead sa valima kas lause on toene voi vaar.
 Testi lahendades esitatakse 10 vaidet."></a-text>
+      <!--Valikud-->
+       <a-box rotation="360 90 0"position="-1 2 -1" src="test.jpg" width="0.01" depth="0.5" height="0.5"></a-box>
+       <a-box rotation="360 90 0"position="1 2 -1" src="oppimine.jpg" width="0.01" depth="0.5" height="0.5"></a-box>
     </a-scene>
   </body>
 </html>
