--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ Vajutades maakoorekihi peale ning jargmisena kuvab see infoseinale infot selle k
 Testi lahendades pead sa valima kas lause on toene voi vaar.
 Testi lahendades esitatakse 10 vaidet."></a-text>
       <!--Valikud-->
-       <a-box rotation="360 90 0"position="-1 2 -1" src="test.jpg" width="0.01" depth="0.5" height="0.5"></a-box>
-       <a-box rotation="360 90 0"position="1 2 -1" src="oppimine.jpg" width="0.01" depth="0.5" height="0.5"></a-box>
+       <a-box rotation="360 90 0"position="-1 2 -1" src="test2.jpg" width="0.01" depth="0.5" height="0.5"></a-box>
+       <a-box rotation="360 90 0"position="1 2 -1" src="oppimine2.jpg" width="0.01" depth="0.5" height="0.5"></a-box>
     </a-scene>
   </body>
 </html>
