--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
   </head>
   <!--Üldine taustaheli-->
-  <audio src="/music/space_ambient.mp3" controls> </audio>
+  <a-sound src="src: url(ambient.mp3)" autoplay="true" position="0 2 5" sound.loop="true"></a-sound>
   
   <body>
     <a-scene background="color: #ECECEC">
