--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <!--Taevapilt-->
       <a-sky src="hehehe.jpg"></a-sky>
       <!--Juhend-->
-      <a-text rotation="0 180 0" position="3 2 5" value="Juhend
+      <a-text id="Juhend" rotation="0 180 0" position="3 2 5" value="Juhend
  
 Alustades sektori sees on sul kaks valikut: Oppimine voi Testi lahendamine.
 Vajutades maakoorekihi peale ning jargmisena kuvab see infoseinale infot selle kihi kohta (video, tekst jne.)
