--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@ Testi lahendades esitatakse 10 vaidet."></a-text>
       
       <a-box id="Punane kast" position="-3 2.7 -3" color="red" depth="0.3" height="1" width="0.1" rotation="90 0 90" ></a-box> 
       <a-text id="Punase kasti tekst" value="Maakoor" position="-3.463 2.714 -2.949" rotation="0 0 0" color="blue" height="1.450" width="2.940"></a-text>
+      <!--Puldi controllerid-->
+      <a-entity vive-focus-controls></a-entity>
       
     </a-scene>
   </body>
