--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"; encoding: "UTF-8" />
     <title>GEOVR! •</title>
     <meta name="description" content="GeoVR! • A-Frame">
-    <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/0.9.0/aframe-master.min.js"></script>
   </head>
 
   
