--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Testi lahendades esitatakse 10 vaidet."></a-text>
       <a-text id="Roosa kasti tekst" value="Tahke sisetuum" position="-3.463 1.1 -2.949" rotation="0 0 0" color="blue" height="1.450" width="2.940"></a-text>
       
       <a-box id="Sinise kast" position="-3 1.5 -3" color="skyblue" depth="0.3" height="1" width="0.1" rotation="90 0 90" ></a-box> 
-      <a-text id="Sinise kasti tekst" value="Sula valistuum" position="-3.463 1.508 -2.949" rotation="0 0 0" color="blue" height="1.450" width="2.940"></a-text>
+      <a-text id="Sinise kasti tekst" value="Sula välistuum" position="-3.463 1.508 -2.949" rotation="0 0 0" color="blue" height="1.450" width="2.940"></a-text>
       
       <a-box id="Kollane kast" position="-3 1.9 -3" color="yellow" depth="0.3" height="1" width="0.1" rotation="90 0 90" ></a-box>
       <a-text id="Kollase kasti tekst" value="Suvavahevoo" position="-3.463 1.914 -2.949" rotation="0 0 0" color="blue" height="1.450" width="2.940"></a-text>
