--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!--Maakera-->
       <a-sphere position="0 1.25 -5" radius="3" src="https://cdn.glitch.com/1c770265-2368-4d9c-acb6-14ecacd28e33%2Fimage.png?1553670256427" shadow></a-sphere>
       <!--Taevapilt-->
-      <a-sky src="hehehe.jpg"></a-sky>
+      <a-sky src="Taust1.jpg"></a-sky>
       <!--Juhend-->
       <a-text id="Juhend" rotation="0 180 0" position="3 2 5" value="Juhend
  
